# RealFans

./: .gitignore  README.md  brownie-config.yaml  helpers.py  pyproject.toml  requirements.txt
badge_minter/: minter.py
contracts/interfaces/: INFTGifts.sol  ISoulboundBadges.sol  IUsers.sol
contracts/protocol/: AbstractVault.sol  CommunityVault.sol  NFTGifts.sol  SoulboundBadges.sol  Users.sol
docs/: abis.py
metadata/: nft_metadata.py  nft_uris.py  soulbound_metadata.py  soulbound_uris.py
metadata/files/: Bronze.json  Diamond.json  Gold.json  Platinum.json  Silver.json
metadata/files/NFT/: Bronze.json  Diamond.json  Gold.json  Platinum.json  Silver.json
metadata/files/soulbound/: DoubleTrouble.json  Fan.json  FiveofaKind.json  Philanthropist.json  TheCollector'sTriumph:MasterofAllTreasures.json  TheDecadeofDevotion.json  ThePatron.json  (+7 more)
nginx/: config
notify/: notifier.py
realfans_api/: enums.py  load_brownie.py  main.py
realfans_api/data/: database.py  models.py
realfans_api/routes/: helloworld.py  helpers.py  stats.py  user.py  users.py
realfans_api/schemas/: stats.py  users.py
realfans_api/scripts/: build_brownie_models.py  build_contracts.py
realfans_api/socialblade/: api.py
realfans_api/tasks/: write_events.py
realfans_api/utils/: cleanup_server.py  colors.py
scripts/: add_nft_uris.py  add_soulbound_uris.py  deploy.py  generate_nft_jsons.py  generate_soulbound_jsons.py
tests/: conftest.py  console_code_snippets.py
tests/integration_tests/: test_1_soulbound_badges.py  test_2_users.py  test_3_nft_gifts.py
twitter/: validator.py
(+3 files in other folders)
